# mobit

./: .gitignore  Taskfile.yml  build_assembly.py  build_rotations.py  build_routed.py  geometry.py  optimize_rotation.py  pin_distance.py  pyproject.toml  render_assembly.py  validate_pins.py  wire_router.py
cad/: connections.json  material_assignments.json  materials.json  pins_battery.json  pins_bno085.json  pins_xiao.json
cad/Seeed Studio XIAO nRF54L15 Dimension in DXF/: XIAO nRF54l15-bot.dxf  XIAO nRF54l15-top.dxf
docs/plans/: power-gating-mosfet.md
mobit/: __init__.py  export_glb.py  geometry.py  serve.py  wire_router.py
scripts/: build.py  compare_lingo.py  distance.py  optimize.py  references.py  validate.py
